--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -12,7 +12,6 @@ $icon-font-path: '../fonts/';
 
 /* Space out content a bit */
 body {
-  padding-top: 20px;
   padding-bottom: 20px;
 }
 
@@ -39,6 +38,7 @@ body {
 
 /* Custom page footer */
 .footer {
+  margin-top:30px;
   padding-top: 19px;
   color: #777;
   border-top: 1px solid #e5e5e5;
@@ -58,6 +58,16 @@ body {
 .jumbotron {
   text-align: center;
   border-bottom: 1px solid #e5e5e5;
+  min-height:450px;
+
+  &.img-background {
+    background-repeat: no-repeat;
+    background-size:cover;
+    background-position: center center;
+    &.inverse * {
+      color:#fff;
+    }
+  }
 }
 .jumbotron .btn {
   padding: 14px 24px;
@@ -88,5 +98,73 @@ body {
   /* Remove the bottom border on the jumbotron for visual effect */
   .jumbotron {
     border-bottom: 0;
+  }
+}
+
+.video-container {
+  position: relative;
+  padding-bottom: 56.25%;
+  padding-top: 30px; height: 0; overflow: hidden;
+}
+ 
+.video-container iframe,
+.video-container object,
+.video-container embed {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.col-box {
+  margin-bottom: 15px;
+}
+.box-with-image {
+  margin-bottom:15px;
+  position:relative;
+  width:100%;
+
+  a * {
+    color:#000;
+  }
+  img {
+    opacity:1;
+  }
+  .caption {
+    position: absolute;
+    z-index: 1;
+    width:100%;
+    top:50%;
+    left:50%;
+    transform: translate(-50%, -50%);
+    
+    h2 {
+      font-weight: bold;
+      padding-top:0;
+      margin-top:0;
+    }
+  }
+  
+}
+
+.box-with-image.inverse {
+  * {
+    color:#fff;
+  }
+}
+
+.centered-container {
+  position:relative;
+  width:100%;
+  height:450px;
+  .caption {
+    width:85%;
+    background-color:rgba(0,0,0, 0.3);
+    padding:25px 40px;
+    position:absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
   }
 }
